--- a/src/global.scss
+++ b/src/global.scss
@@ -36,9 +36,9 @@
   --ion-item-text-color: var(--ion-color-dark);
 }
 
-body.dark {
-  // dark mode styles
-  --ion-text-color: var(--ion-color-light);
-  --ion-item-text-color: var(--ion-color-light);
-}
+// body.dark {
+//   // dark mode styles
+//   --ion-text-color: var(--ion-color-light);
+//   --ion-item-text-color: var(--ion-color-light);
+// }
 
